--- a/client/src/components/navigationBar/NavigationBar.module.css
+++ b/client/src/components/navigationBar/NavigationBar.module.css
@@ -12,7 +12,8 @@
 }
 .logo{
     font-size: 28px;
-    font-weight: bold;
+    font-family: "Arial Black";
+    font-style: italic;
     color: white;
 }
 .navBar ul{
