--- a/client/src/pages/Cars.module.css
+++ b/client/src/pages/Cars.module.css
@@ -1,7 +1,19 @@
-.wrapper{
+.wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
     gap: 2rem;
     justify-content: center;
-
+    margin-top: 50px;
+}
+select{
+    width: 100%;
+    padding: 8px 16px;
+    margin: 6px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.order-form{
+    margin-top: 60px;
 }
