--- a/client/src/pages/Cars.module.css
+++ b/client/src/pages/Cars.module.css
@@ -1,11 +1,4 @@
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
-    gap: 2rem;
-    justify-content: center;
-    margin-top: 50px;
-}
-select{
+.select {
     width: 100%;
     padding: 8px 16px;
     margin: 6px 0;
@@ -14,6 +7,21 @@ select{
     border-radius: 4px;
     box-sizing: border-box;
 }
-.order-form{
-    margin-top: 60px;
+.order-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.cars-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
+    gap: 2rem;
+    justify-content: center;
+}
+.wrapper {
+    margin-top: 50px;
+}
+label + label{
+    margin-left: 10px;
 }
