Added functionality to save cars to 'favourites'

--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -49,3 +49,8 @@ body{
     color: white;
     background-color: #E72020FF;
 }
+.favourite{
+    margin-left: 50px;
+    font-size: 20px;
+    cursor: pointer;
+}
