--- a/client/src/pages/Account.module.css
+++ b/client/src/pages/Account.module.css
@@ -3,4 +3,8 @@
     grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
     gap: 2rem;
     justify-content: center;
+    margin-bottom: 50px;
+}
+h1{
+    margin: 50px;
 }
