--- a/client/src/pages/cars/Cars.module.css
+++ b/client/src/pages/cars/Cars.module.css
@@ -18,6 +18,7 @@
     grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
     gap: 2rem;
     justify-content: center;
+    z-index: 0;
 }
 .wrapper {
     margin-top: 50px;
