Fixed the homepage design, added logo to the auth page and changed the color.

--- a/client/src/components/auth/Auth.module.css
+++ b/client/src/components/auth/Auth.module.css
@@ -6,7 +6,18 @@
     height: 100vh;
     background-color: black;
 }
-
+.logo{
+    font-size: 38px;
+    font-family: "Arial Black";
+    font-style: italic;
+    color: white;
+}
+.logo span{
+    font-size: 38px;
+    font-family: "Arial Black";
+    font-style: italic;
+    color: red;
+}
 .Auth-card {
     display: flex;
     flex-direction: column;
