--- a/client/src/components/navigationBar/NavigationBar.module.css
+++ b/client/src/components/navigationBar/NavigationBar.module.css
@@ -16,6 +16,12 @@
     font-style: italic;
     color: white;
 }
+.logo span{
+    font-size: 28px;
+    font-family: "Arial Black";
+    font-style: italic;
+    color: red;
+}
 .navBar ul{
     display: flex;
 }
