Enabled users to view other cars owned by the same user

--- a/client/src/pages/car/Car.module.css
+++ b/client/src/pages/car/Car.module.css
@@ -39,3 +39,10 @@ img{
     margin-left: -2px;
     float: left;
 }
+.user-container{
+    display: flex;
+    justify-content: center;
+}
+.user-button{
+    width: 100px;
+}
